--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "news_scraper",
   "version": "1.0.0",
   "description": "web news scraper",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,7 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "mongoose": "^5.5.12"
+    "mongoose": "^5.5.12",
+    "morgan": "^1.9.1"
   }
 }
